css/global.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}

/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
	display: block;
}

body {
	line-height: 1;
}

ol,
ul {
	list-style: none;
}

blockquote,
q {
	quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
	content: '';
	content: none;
}

table {
	border-collapse: collapse;
	border-spacing: 0;
}

html {
	box-sizing: border-box;
	overflow-x: none;
}

*,
*:before,
*:after {
	box-sizing: inherit;
}


:root {
	--primary-color: #2a2929;
	--secondary-color: #e8b28a;
	--tertiary-color: #BD7976;
	--white-color: #ffffffbf;
	--negrita: 600;
	--size-0: 0.61rem;
	--size-1: 1rem;
	--size-2: 1.6rem;
	--size-3: 2.59rem;
	--size-4: 4.1rem;
	--size-5: 6.64rem;
	--size-6: 10.7rem;
}

/* SVG's */
circle,
path {
	stroke-width: 1.5px;
}

/* Colores */
html {
	color: var(--white-color);
	background-color: var(--primary-color);
}

h1 {
	color: var(--secondary-color);
}
/* @media screen and (max-width: 500px) {
	h1 {
		color: var(--primary-color);
	}
} */

footer path,
footer circle {
	fill: var(--secondary-color);
}

small {
	color: var(--secondary-color);
}

/* FUENTES */
html {
	font-size: 18px;
	letter-spacing: 1px;
	font-weight: 300;
}

body {
	font-family: sans-serif, arial, helvetica;
	line-height: 1.7;
}

main {
	font-size: var(--size-1);
}

h1 {
	font-size: var(--size-3);
	font-weight: var(--negrita);
	line-height: 1.2;
}
@media screen and (max-width: 500px) {
	h1 {
		/* color: var(--primary-color); */
		/* font-weight: 500; */
	}
}

h2,
h3 {
	font-size: var(--size-2);
}

dt {
	font-weight: var(--negrita);
}

small {
	font-size: var(--size-0);
}

.tar {
	text-align: right;
}
.tac {
	text-align: center;
}
.tal {
	text-align: left;
}

/* Spacing/Sizing */
.muchoPadding {
	padding-top: var(--size-6);
	padding-right: var(--size-4);
	padding-bottom: var(--size-4);
	padding-left: var(--size-4);
}
.p-0 {
	padding: 0;
}
.p-4 {
	padding: var(--size-4);
}

.p-5 {
	padding: var(--size-5);
}

.pt-2 {
	padding-top: var(--size-2);
}

.pt-3 {
	padding-top: var(--size-3);
}

.pl-2 {
	padding-left: var(--size-2);
}

.pr-2 {
	padding-right: var(--size-2);
}

.pr-4 {
	padding-right: var(--size-4);
}

.pb-3 {
	padding-bottom: var(--size-3);
}

.pb-4 {
	padding-bottom: var(--size-4);
}

.pt-4 {
	padding-top: var(--size-4);
}

.pt-5 {
	padding-top: var(--size-5);
}

blockquote {
	font-style: italic;
	color: var(--secondary-color);
	font-size: var(--size-2);
	text-align: center;
}

small {
	margin-bottom: var(--size-2);
}

section {
	min-height: 25vh;
}

footer {
	padding: var(--size-4);
	text-align: center;
}

blockquote {
	padding-bottom: var(--size-4);
}

footer svg {
	width: var(--size-3);
}

.full-height {
	min-height: 100vh;
}

.mid-height {
	min-height: 50vh;
}

h3,
dd,
p,
dt {
	padding-bottom: var(--size-2);
}

dd {
	padding-left: var(--size-2);
}

p,
dd,
small {
	max-width: 800px;
}

p,
small {
	margin-left: auto;
	margin-right: auto;
}


/* GRID */

section {
	display: grid;
	place-items: center;
}

.siteheader {
	position: fixed;
	z-index: 1;
	padding: var(--size-2);
}

.siteheader svg {
	width: var(--size-4);
	transition: transform 1s;
}

.siteheader svg:hover {
	transform: rotate(360deg) scale(1.3);
	transition: transform 1s;
}

.siteheader svg circle {
	stroke: var(--secondary-color);
	fill: none;
}
@media screen and (max-width: 900px) {
	.siteheader svg circle {
		stroke-width: 1px;
	}
}


/* Helpers */
.rounded {
	border-radius: 50%;
}

#scrollDownBtn {
	width: var(--size-4);
	stroke: var(--primary-color);
	align-self: end;
}
@media screen and (max-width: 500px;) {
	#scrollDownBtn {
		align-self: center;		
	}
}

#scrollDownBtn:hover {
	cursor: pointer;
}

hr {
	width: 3vw;
}

.centered {
	text-align: center;
}

.cover {
	display: grid;
	background-image: url("../images/bg4.jpeg");
	background-position: center;
	background-size: cover;
	background-attachment: fixed;
	align-items: end;
}
@media screen and (max-width: 500px) {
	.cover {
		/* align-items: center; */
		background-size: inherit;
		background-position: 52% top;
		background-attachment: inherit;
		background-repeat: no-repeat;

		grid-template-rows: 1fr 0.4fr;

		padding-left: var(--size-1);
		padding-right: var(--size-1);
	}
}

.franja {
	color: var(--primary-color);
	background-color: var(--secondary-color);
}

